@@ -48,8 +48,7 @@ bool Pipe_ConfigurePipe(const uint8_t Number, const uint8_t Type, const uint8_t 
 	UPCFG0X = ((Type << EPTYPE0) | Token | ((EndpointNumber & PIPE_EPNUM_MASK) << PEPNUM0));
 	UPCFG1X = ((1 << ALLOC) | Banks | Pipe_BytesToEPSizeMask(Size));
 
-	if (Token == PIPE_TOKEN_IN)
-	  Pipe_SetInfiniteINRequests();
+	Pipe_SetInfiniteINRequests();
 
 	return Pipe_IsConfigured();
 }
